[gd_scene load_steps=19 format=3 uid="uid://84srdy68exyj"]

[ext_resource type="Script" uid="uid://ds5brf0nua6do" path="res://weapons/laser/laser.gd" id="1_b2cb0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o2wld"]
radius = 300.0

[sub_resource type="Gradient" id="Gradient_b2cb0"]
colors = PackedColorArray(1, 0.599933, 0.540393, 1, 1, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_wmd2k"]
offsets = PackedFloat32Array(0.119681, 0.462766)
colors = PackedColorArray(1, 1, 1, 1, 0.0196078, 0.0196078, 0.0196078, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y0c62"]
gradient = SubResource("Gradient_wmd2k")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_y0c62"]
offsets = PackedFloat32Array(0.358434, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rnfmb"]
gradient = SubResource("Gradient_y0c62")

[sub_resource type="Curve" id="Curve_b2cb0"]
_data = [Vector2(0, 0.700986), 0.0, 0.0, 0, 0, Vector2(1, 0.330778), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wmd2k"]
curve = SubResource("Curve_b2cb0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rnfmb"]
particle_flag_disable_z = true
spread = 25.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.5
scale_curve = SubResource("CurveTexture_wmd2k")
color_ramp = SubResource("GradientTexture1D_rnfmb")

[sub_resource type="Gradient" id="Gradient_b62fb"]
offsets = PackedFloat32Array(0, 0.603723)
colors = PackedColorArray(1, 1, 1, 1, 0.0196078, 0.0196078, 0.0196078, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w05se"]
gradient = SubResource("Gradient_b62fb")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_b2cb0"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(150, 0, 0)
emission_shape = 3
emission_box_extents = Vector3(150, 1, 1)
direction = Vector3(-1, 0, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = -50.0
tangential_accel_max = 50.0
scale_min = 0.3
scale_max = 0.3
scale_curve = SubResource("CurveTexture_wmd2k")
scale_over_velocity_min = 37.88
scale_over_velocity_max = 194.44
color_ramp = SubResource("GradientTexture1D_rnfmb")

[sub_resource type="Gradient" id="Gradient_aly5b"]
offsets = PackedFloat32Array(0.388298, 0.74734)
colors = PackedColorArray(1, 1, 1, 1, 0.0196078, 0.0196078, 0.0196078, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kr5l8"]
gradient = SubResource("Gradient_aly5b")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0mc8a"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 1.07288e-05
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.5
scale_curve = SubResource("CurveTexture_wmd2k")
color_ramp = SubResource("GradientTexture1D_rnfmb")

[sub_resource type="Gradient" id="Gradient_rnfmb"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.382979, 0.712766)
colors = PackedColorArray(1, 1, 1, 1, 0.380523, 0.380523, 0.380523, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b62fb"]
gradient = SubResource("Gradient_rnfmb")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Laser" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_b2cb0")
growth_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_o2wld")

[node name="RayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 0)

[node name="Line2D" type="Line2D" parent="RayCast2D"]
unique_name_in_owner = true
points = PackedVector2Array(0, 0, 300, 0)
width = 8.0
gradient = SubResource("Gradient_b2cb0")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 10.0
antialiased = true

[node name="CastingParticles2D" type="GPUParticles2D" parent="RayCast2D"]
unique_name_in_owner = true
modulate = Color(1, 0.333333, 0, 1)
emitting = false
texture = SubResource("GradientTexture2D_y0c62")
lifetime = 0.2
visibility_rect = Rect2(0, -50, 100, 100)
process_material = SubResource("ParticleProcessMaterial_rnfmb")

[node name="BeamParticles2D" type="GPUParticles2D" parent="RayCast2D"]
unique_name_in_owner = true
modulate = Color(0.997451, 0.756831, 0.696668, 1)
emitting = false
amount = 25
texture = SubResource("GradientTexture2D_w05se")
randomness = 1.0
visibility_rect = Rect2(0, -50, 300, 100)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_b2cb0")

[node name="CollisionParticles2D" type="GPUParticles2D" parent="RayCast2D"]
unique_name_in_owner = true
modulate = Color(1, 0.333333, 0, 1)
position = Vector2(263, 0)
emitting = false
texture = SubResource("GradientTexture2D_kr5l8")
lifetime = 0.5
visibility_rect = Rect2(0, -50, 100, 100)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_0mc8a")

[node name="CollisionLight" type="PointLight2D" parent="RayCast2D/CollisionParticles2D"]
unique_name_in_owner = true
scale = Vector2(2, 2)
color = Color(1, 0, 0, 1)
energy = 4.93
texture = SubResource("GradientTexture2D_b62fb")
